--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,7 +1,7 @@
 .popup__button {
   background-color: #000;
   color: #fff;
-  margin: 0;
+  margin-top: 13px;
   padding: 0;
   border-radius: 2px;
   width: 358px;
