--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,4 +2,22 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  background-color: #fff;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  max-width: 430px;
+  min-height: 330px;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  padding: 34px 36px 37px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 600px) {
+  .popup__container {
+    max-width: 282px;
+    min-height: 322px;
+    padding: 25px 22px;
+  }
 }
