--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,7 +1,9 @@
 .element__image {
-  max-width: 282px;
-  object-position: center;
-  object-fit: fill;
+  width: 282px;
+  height: 282px;
+  object-position: top;
+  object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  cursor: pointer;
 }
