--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -6,6 +6,7 @@
   width: 100%;
   column-gap: 17px;
   row-gap: 20px;
+  justify-items: center;
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
