--- a/pages/index.css
+++ b/pages/index.css
@@ -49,3 +49,6 @@
 @import url(../blocks/popup/__card-image/popup__card-image.css);
 @import url(../blocks/popup/__card-title/popup__card-title.css);
 @import url(../blocks/popup/_full-image/popup__close_full-image.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
+@import url(../blocks/popup/__error/_visible/popup__error_visible.css);
+@import url(../blocks/popup/__add-item/__add-item_error/popup__add-item_error.css);
