--- a/main.css
+++ b/main.css
@@ -12,14 +12,17 @@
 .profile__status{font-size:18px;font-style:normal;font-weight:400;grid-area:status;line-height:22px;margin:16px 0 0;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:670px){.profile__status{font-size:14px;line-height:17px;margin:7px 0 0}}
 .profile__edit{background-clip:content-box;background-color:#000;background-image:url(a1892ea72cb87c8fc3aa.svg);background-position:50%;border:none;cursor:pointer;grid-area:edit;height:24px;margin:0;padding:0;transition:.5s;width:24px}.profile__edit:hover{opacity:.6}@media screen and (max-width:599px){.profile__edit{border:1px solid #fff;height:18px;width:18px}}
 .profile__add{align-self:center;background-clip:border-box;background-color:#000;background-image:url(6f41966c71dd7895857f.svg);background-repeat:no-repeat;border:none;border-radius:2px;cursor:pointer;height:50px;padding:0;transition:.5s;width:150px}.profile__add:hover{opacity:.6}@media screen and (max-width:600px){.profile__add{background-image:url(6f86ece55e54220c5485.svg);width:282px}}
+.profile__avatar-button{background-color:rgba(0,0,0,.8);background-image:url(a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;background-size:26px;border:none;border-radius:50%;cursor:pointer;left:0;margin:0;min-height:120px;min-width:120px;opacity:0;padding:0;position:absolute;top:0;transition:.5s}.profile__avatar-button:hover{opacity:1}
 .elements{box-sizing:border-box;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-moz-column-gap:17px;column-gap:17px;display:grid;grid-template-columns:repeat(auto-fit,minmax(282px,1fr));grid-template-rows:repeat(auto-fit,minmax(361px,1fr));justify-items:center;margin:0 auto;max-width:880px;padding:0;row-gap:20px;width:100%}@media screen and (max-width:600px){.elements{align-items:center;justify-items:center;max-width:320px}}
 .element{line-height:0;list-style:none;max-width:282px;position:relative}
 .element__image{border-top-left-radius:10px;border-top-right-radius:10px;cursor:pointer;height:282px;-o-object-fit:cover;object-fit:cover;-o-object-position:top;object-position:top;width:282px}
-.element__info{background-color:#fff;border-bottom-left-radius:10px;border-bottom-right-radius:10px;box-sizing:border-box;color:#000;display:flex;justify-content:space-between;margin:0;max-width:282px;padding:25px 15px 31px 21px}
-.element__title{font-size:23px;font-style:normal;font-weight:900;line-height:23px;margin:0;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}
+.element__info{background-color:#fff;border-bottom-left-radius:10px;border-bottom-right-radius:10px;box-sizing:border-box;color:#000;display:flex;justify-content:space-between;margin:0;max-width:282px;padding:22px 21px 18px}
+.element__title{font-size:23px;font-style:normal;font-weight:900;line-height:23px;margin:0;overflow:hidden;padding-top:8px;text-overflow:ellipsis;white-space:nowrap}
 .element__like{background-color:#fff;background-image:url(87ed371465c7a6a1cd01.svg);background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;height:19px;transition:.5s;width:22px}.element__like:hover{opacity:.5}
-.element__delete{background:url(823b0cf1b0b7e9cb7cad.svg);background-color:hsla(0,0%,100%,0);background-repeat:no-repeat;border:none;cursor:pointer;height:19px;position:absolute;right:20px;top:20px;transition:.5s;width:18px}.element__delete:hover{opacity:.5}
+.element__delete{background:url(823b0cf1b0b7e9cb7cad.svg);background-color:hsla(0,0%,100%,0);background-repeat:no-repeat;border:none;cursor:pointer;height:19px;position:absolute;right:16px;top:18px;transition:.5s;width:18px}.element__delete:hover{opacity:.5}
 .element_active{background-image:url(fe17a515669479b1e649.svg);opacity:1}
+.element__likes-group{display:flex;flex-direction:column;margin:0;min-height:35px;min-width:22px;padding:0}
+.element__number-likes{font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin-top:3px;min-height:13px;min-width:10px;padding:0;text-align:center}
 .footer{margin:67px auto 0;max-width:880px;width:100%}@media screen and (max-width:900px){.footer{margin:48px 0 0 19px;max-width:228px}}
 .footer__copyright{color:#545454;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:0;padding:0}@media screen and (max-width:900px){.footer__copyright{font-size:14px;line-height:17px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:all .3s linear;visibility:hidden;width:100%}
@@ -45,4 +48,8 @@
 .popup__error{color:red;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin:0;min-height:30px;padding:0;visibility:hidden}
 .popup__error_visible{visibility:visible}
 .popup__add-item_error{border-bottom:1px solid red}
+.popup__button_save-avatar{margin-top:19px}
+.popup__container_avatar{min-height:272px}
+.popup__container_confirmation{min-height:181px}
+.popup__title_confirm{margin-bottom:21px}
 
