--- a/src/blocks/element/__info/element__info.css
+++ b/src/blocks/element/__info/element__info.css
@@ -3,7 +3,7 @@
   color: #000;
   display: flex;
   justify-content: space-between;
-  padding: 25px 15px 31px 21px;
+  padding: 22px 21px 18px;
   box-sizing: border-box;
   margin: 0;
   max-width: 282px;
