--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -17,6 +17,7 @@
 @import url(../blocks/profile/__status/profile__status.css);
 @import url(../blocks/profile/__edit/profile__edit.css);
 @import url(../blocks/profile/__add/profile__add.css);
+@import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
@@ -26,6 +27,8 @@
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__delete/element__delete.css);
 @import url(../blocks/element/_active/element_active.css);
+@import url(../blocks/element/__likes-group/element__likes-group.css);
+@import url(../blocks/element/__number-likes/element__number-likes.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -53,3 +56,8 @@
 @import url(../blocks/popup/__error/popup__error.css);
 @import url(../blocks/popup/__error/_visible/popup__error_visible.css);
 @import url(../blocks/popup/__add-item/_error/popup__add-item_error.css);
+@import url(../blocks/popup/__button/_save-avatar/popup__button_save-avatar.css);
+@import url(../blocks/popup/__container/_avatar/popup__container_avatar.css);
+@import url(../blocks/popup/__container/_confirmation/popup__container_confirmation.css);
+@import url(../blocks/popup/__title/_confirm/popup__title_confirm.css);
+
