--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,9 @@
 .profile__avatar {
-  max-width: 120px;
+  width: 120px;
+  height: 120px;
   padding: 0;
   margin-right: 30px;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
   border-radius: 50%;
 }
