--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -18,6 +18,7 @@
 @import url(../blocks/profile/__edit/profile__edit.css);
 @import url(../blocks/profile/__add/profile__add.css);
 @import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
+@import url(../blocks/profile/__box-avatar/profile__box-avatar.css);
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
